--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -45,6 +45,7 @@
       
       <div class="row" style="text-align:center">
 	<div class="col-xs-12" style="text-align:center; margin-top:10px">
+	  <p id="id_msg" style="color:red"></p>
 	  {% if order_exists %}
 	  <a href="/weixin/sampleads/{{ pk }}/">您的试用申请已经提交！查看 >></a>
 	  {% else %}
