--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -125,7 +125,7 @@
     var msg = $("#id_msg");  
     var subscribe = $("#id_subscribe").val();
     if (subscribe != "1") {
-      msg[0].innerHTML = "亲，请点击右上角“...”，选择“查看公众号”，下拉“关注”，然后申请哦！";
+      msg[0].innerHTML = "亲，您还没关注咱呢！请点击右上角[...]，选择[查看公众号]，点击[关注]。";
       return false;
     }
     if (vip_status == "0" && validateVipCode(vipcode) == false) {
