--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -45,8 +45,8 @@
       <p style="color:#029fd6">亲，10月活动将于10月8日下午6：00开始，请持续关注！</p>
       {% endif %}
       <h5 style="color:#029fd6">申请攻略：</h5>
-      <p>1. <font style="color:#029fd6">记住，一定要让妈妈好友闺密使用你的邀请码！</font>她们申请到了会感谢您！</font></p>
-      <p>2. <font style="color:#029fd6">论坛/微博/社区攻略：发帖会被删，回帖一般不会。在回帖中带上你的F码:)</font></p>
+      <p style="color:red">1. 记住，一定要让妈妈好友闺密使用你的F码！她们申请到了会感谢您！</p>
+      <p style="color:red">2. 论坛/微博/社区攻略：发帖会被删，回帖一般不会。在回帖中带上你的F码:)</p>
       <p>亲，分享、邀请，继续加油吧，惊喜等着您！</p>
     </div>
   </div>
