--- a/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
@@ -35,7 +35,7 @@
 	<hr/>
 	<div class="row">
 	  <div class="col-xs-12">
-	    <h5 style="color:red"><b>免单问答</b>（答对一题得2个积分，共10分）</h5>
+	    <h5 style="color:red"><b>积分问答</b>（每题2个积分，共10分）</h5>
 	    <div>
 	      <p style="color:#029fd6">1. 若您获得了双11免单资格，我们需要你到官方旗舰店付款购买，确认收到货满意之后，再全额退款给您，你会:</p>
 	      <p id="id_p11"><input type="radio" name="p1" value="0" id="id_input11"> 不愿意。</p>
