--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -26,7 +26,7 @@
 	<input type="hidden" name="sample_pk" value="{{ sample.pk }}"/>
 	<input type="hidden" name="sku_code" value="{{ sku.sku_code }}"/>
 	<input type="hidden" name="vipcode" value="{{ vipcode }}"/>
-	<input type="hidden" name="vip_exists" value="{{ vip_exists }}"/>
+	<input type="hidden" name="fcode_pass" value="{{ fcode_pass }}"/>
 
       {% endif %}
 	<h5 style="color:#3071a9">出生/预产信息 </h5>
