--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -22,7 +22,7 @@
     <div class="panel-body">
       {% if from_page == "freesamples" %}
       <p>亲，还有<font style="color:orange"><span style="font-size:20px">2</span>步</font>就完成啦！请补充宝宝信息：</p>
-      <form method="post" action="/weixin/sampleapply/" onsubmit="return check()">{% csrf_token %}
+      <form method="post" action="/weixin/sampleapply/" onsubmit="return check()">
 	<input type="hidden" name="sample_pk" value="{{ sample.pk }}"/>
 	<input type="hidden" name="sku_code" value="{{ sku.sku_code }}"/>
 	<input type="hidden" name="vipcode" value="{{ vipcode }}"/>
@@ -30,7 +30,7 @@
 
       {% endif %}
 	<h5 style="color:#3071a9">出生/预产信息 </h5>
-
+	{% csrf_token %}
 	<div class="row">
 	  <div class="col-xs-3">
 	    <p style="float:right">年</p>
