--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -27,7 +27,7 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <a href="{{ sample.sale_url }}" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZ8xiaJQoY9RXEkPpmKtDZCvHuAicJsCmcQ3C9DGUYUC2wsS1iahzbFicVhw/0" alt="...">
+	    <img src="{{ sample.pic_url }}" alt="...">
 	  </a>
 
 	  {% if today_orders > 1000 %}
