--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -10,8 +10,9 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">十月活动公告</div>
   <div class="panel-body">
-    <p>第一阶段：10月08日 - 10月16日： 免单大礼活动（1000份免单名额）。第二阶段积分换购活动开始投票，投票即送积分。</p>
-    <p>第二阶段：10月17日 - 10月21日： 积分换购。</p>
+    <p>距离活动开始，还剩<font style="font-size:20px;color:red">{{ days_left }}</font>天<font style="font-size:20px;color:red">{{ hours_left }}</font>小时！</p>
+    <p><font style="color:orange">第一阶段 (10月08日 - 10月16日)：</font> 免单大礼活动（1000份免单名额）。第二阶段积分换购活动开始投票，投票即送积分。</p>
+    <p><font style="color:orange">第二阶段 (10月17日 - 10月21日)：</font> 积分换购。</p>
     <p></p>
   </div>
 </div>
