--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -1,9 +1,8 @@
 {% extends "weixin/weixin_base.html" %}
 
 {% block title %} 
-优尼世界：宝宝用品100元免单，无门槛，速度抢！
+宝宝用品100元免单，无门槛，速度抢！
 {% endblock %}
-
 
 {% block container %}
 
@@ -18,6 +17,8 @@
 	  <p style="color:blue">亲，您的申请已经成功提交！</p>
 	  <p style="color:blue">你获得了专属F码：{{ vipcode }}，快把本页发给好友, 一起赚免单吧！</p>
 	  <p style="color:blue">您的F码被朋友<font style="color:red">使用次数越多</font>，您被选中的几率就越大！</p>
+	  <p style="color:red">若您的F码被使用15次以上，您中奖的几率就大大增加了！</p>
+	  <p style="color:red">若您的F码被使用25次以上，您就具有了决定性的竞争力！！</p>
 	  <p style="color:blue;font-size:20px">分享朋友圈后蓝色文字只有你自己可以看见！</p>
 	</div>
       </div>
@@ -26,7 +27,7 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <div class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3GC9Flq6Q7vwglrNkxIPZLIyYlUibDQ0R7qK4wMYlNkibm132jqZHj6icOFIvbIN1ZiaD0YzbXhgH6w/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZ8xiaJQoY9RXEkPpmKtDZCvHuAicJsCmcQ3C9DGUYUC2wsS1iahzbFicVhw/0" alt="...">
 	  </div>
 	</div>
       </div>
@@ -67,8 +68,10 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>还有，悄悄告诉您：<font style="color:red">申请提交后的页面一定要分享到朋友圈哦，您的F码被朋友<font style="color:red">使用次数越多</font>，您被选中的几率就越大！(朋友申请到了也会感激您！)</font></p>
+	  <p style="color:red">若您的F码被使用15次以上，您中奖的几率就大大增加了！</p>
+	  <p style="color:red">若您的F码被使用25次以上，您就具有了决定性的竞争力！！</p>
 	  <div class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3GC9Flq6Q7vwglrNkxIPZ7noJym3Hrh8MyBaYmGf3BibVUzic7n4hkaDicch99UCxB01kYwmFDpTew/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZX72iauodAN7m3fbBXBiaK1FGXaBZWuhqMn7RdPlnED6ia3PnXkS9xmbDw/0" alt="...">
 	  </div>
 	</div>
       </div>
