--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -58,16 +58,13 @@
 
 	  <p>您肯定已经厌倦了类似 “订单金额满100元起用，每张订单限用一张” 这样的条条框框？ 说送你100元券，结果领完一看细则，艾玛! 分成了十张10元的，每次还限用一张！天空飘来五个字“这不坑爹嘛！”</p>
 	  <p>优尼世界这次让你嗨翻！<font style="color:#029fd6">不设任何门槛，100元可以一次性花完！</font>霸气！阔绰！要的就是这国际范儿！</p>
-	  <p>活动时间：10月8日 - 10月16日（截至晚上12点）</p>
-	  <p>开奖时间：10月17日10:00前公布完所有名单。</p>
-
-	  <p>您也可以关注【优尼世界】公众微信，到[活动中心] -> [免费试用]，开始申请！！</p>
+	  <p>快来关注申请吧！！！</p>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>还有，悄悄告诉您：<font style="color:red">申请提交后的页面一定要分享到朋友圈哦，您的F码被朋友<font style="color:red">使用次数越多</font>，您被选中的几率就越大！(朋友申请到了也会感激您！)</font></p>
+	  <p>最后，悄悄告诉您：<font style="color:orange">本页一定要分享到朋友圈哦，您的F码被朋友<font style="color:red">使用次数越多</font>，您被选中的几率就越大！(朋友申请到了也会感激您！)</font></p>
 	  <p style="color:red">若您的F码被使用15次以上，您中奖的几率就大大增加了！</p>
 	  <p style="color:red">若您的F码被使用25次以上，您就具有了决定性的竞争力！！</p>
 	  <div class="thumbnail">
