--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -8,45 +8,51 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:#e8792a">9月免费试用投票</div>
+    <div class="panel-heading" style="color:#e8792a">十月积分（5折）换购投票</div>
     <div class="panel-body">
-      <p style="color:#029fd6">亲，优尼世界9月大礼，您想赢走哪款宝贝呢？快来投票吧！</p>
+      <p style="color:#029fd6">十月积分换购，您想5折换走哪个系列的宝贝呢？投票就送积分哦！</p>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#e8792a">选择一：婴幼儿时尚斗篷/披风</h5>
+	  <h5 style="color:#e8792a">选择一：婴幼儿时尚羽绒系列</h5>
 	</div>
       </div>
       <div class="row">
-	<div class="col-xs-6" style="text-align:center">
+	<div class="col-xs-12" style="text-align:center">
 	  <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtMTpiclRQJZ7aBpwKS3xsvUXAqTHAHJBxx0s4CewutslnXYicWiaZtX34jtECwgv5IkV7gibxczqAo7A/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZegRy8B01FjnJG91lKyJAIpsEFhAxg4T7VUwrUpPe1lkRu5RWPlLDLQ/0" alt="...">
 	  </a>
 	</div>
-	<div class="col-xs-6" style="text-align:center">
-	  <p style="color:#e8792a">多款式，均码</p>
-	  <p><a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
-	  <p id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="1" id="id_input1"> 我选择时尚的斗篷/披风</p>{% csrf_token %}
+      </div>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center">
+<!--
+	  <p style="color:#e8792a">多款式，均码 <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
+-->
+	  <p id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="1" id="id_input1"> 我选择 婴幼儿时尚羽绒系列</p>{% csrf_token %}
 	  <p style="color:red">得票率：{{ ratio1 }}%</p>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#e8792a">选择二：婴幼儿时尚分腿睡袋</h5>
+	  <h5 style="color:#e8792a">选择二：婴幼儿温暖棉服系列</h5>
 	</div>
       </div>
 
       <div class="row">
-	<div class="col-xs-6" style="text-align:center">
+	<div class="col-xs-12" style="text-align:center">
 	  <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvuSp8nx80CxFU6BqRvnNq17rGeyo6boPyITfGMbJvImH5Ckx0DtHzW0ictUWaqV5qeGIbUqS3yZxQ/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZxRcwCnl1kKOwXM3QfwBGvd5o3qhUGKCVbibCWDlUxNL1uMbweO5wia1Q/0" alt="...">
 	  </a>
 	</div>
-	<div class="col-xs-6" style="text-align:center">
-	  <p style="color:#e8792a">多款式，多尺寸</p>
-	  <p><a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
-	  <p id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="2" id="id_input2"> 我选择时尚的分腿睡袋</p>
+      </div>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center">
+<!--
+	  <p style="color:#e8792a">多款式，多尺寸 <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
+-->
+	  <p id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="2" id="id_input2"> 我选择婴幼儿温暖棉服系列</p>
 	  <p style="color:red">得票率：{{ ratio2 }}%</p>
 	</div>
       </div>
@@ -64,13 +70,8 @@
 	  {% if exist %}
 	  <p style='color:#029fd6'>亲，您的选择已经提交！快告诉朋友，让他们也来投票吧！</p>
 	  {% else %}
-	  <button type="button" class="btn btn-warning" id="id_submit" onclick="submit();">提交</button>
+	  <button type="button" class="btn btn-warning" id="id_submit" onclick="submit();">投票提交</button>
 	  {% endif %}
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-12" style="text-align:center">
-	  <p style="color:red">温馨提示：活动将于<font style="font-size:20px">8月29日晚上12:00</font>正式开放申请入口。请提前到【我的】->【宝宝档案】<font style="font-size:20px">绑定手机和填写宝宝档案</font>，活动一开始直接提交申请即可！</p>
 	</div>
       </div>
       
