--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -13,7 +13,7 @@
     <p>距离活动开始，还剩<font style="font-size:20px;color:red">{{ days_left }}</font>天<font style="font-size:20px;color:red">{{ hours_left }}</font>小时！</p>
     <p><font style="color:orange">第一阶段 (10月08日 - 10月16日)：</font> 免单大礼活动（1000份免单名额）。第二阶段积分换购活动开始投票，投票即送积分。</p>
     <p><font style="color:orange">第二阶段 (10月17日 - 10月21日)：</font> 积分换购。</p>
-    <p></p>
+    <p style="font-size:20px"><a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">点击投票赢积分>></a></p>
   </div>
 </div>
 
