--- a/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
@@ -14,7 +14,7 @@
 	<input type="hidden" name="sample_pk" value="{{ sample.pk }}"/>
 	<input type="hidden" name="sku_code" value="{{ sku.sku_code }}"/>
 	<input type="hidden" name="vipcode" value="{{ vipcode }}"/>
-	<input type="hidden" name="vip_exists" value="{{ vip_exists }}"/>
+	<input type="hidden" name="fcode_pass" value="{{ fcode_pass }}"/>
 	<div class="row">
 	  <div class="col-xs-4" style="text-align:center">
 	    <div class="thumbnail">
