--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -64,7 +64,7 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>最后，悄悄告诉您：<font style="color:orange">本页一定要分享到朋友圈哦，您的F码被朋友<font style="color:red">使用次数越多</font>，您被选中的几率就越大！(朋友申请到了也会感激您！)</font></p>
+	  <p>最后，悄悄告诉您：<font style="color:orange">您的F码被朋友<font style="color:red">使用次数越多</font>，您被选中的几率就越大！(朋友申请到了也会感激您！)</font></p>
 	  <p style="color:red">若您的F码被使用15次以上，您中奖的几率就大大增加了！</p>
 	  <p style="color:red">若您的F码被使用25次以上，您就具有了决定性的竞争力！！</p>
 	  <div class="thumbnail">
