--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -8,7 +8,7 @@
 
 <div class="container-fluid">
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">十月大礼 见者有份 100万免单送宝宝！</div>
+    <div class="panel-heading" style="color:red"><b>十月大礼 见者有份 100万免单送宝宝！</b></div>
     <div class="panel-body">
 
       {% if identical %}
