--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -19,7 +19,7 @@
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-	  <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect" class="thumbnail">
+	  <a href="#" class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZegRy8B01FjnJG91lKyJAIpsEFhAxg4T7VUwrUpPe1lkRu5RWPlLDLQ/0" alt="...">
 	  </a>
 	</div>
@@ -42,7 +42,7 @@
 
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-	  <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect" class="thumbnail">
+	  <a href="#" class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZxRcwCnl1kKOwXM3QfwBGvd5o3qhUGKCVbibCWDlUxNL1uMbweO5wia1Q/0" alt="...">
 	  </a>
 	</div>
