invite result html

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -34,7 +34,7 @@
       {% endif %}
       {% endif %}
       {% else %}
-      <p style="color:#029fd6">亲，10月活动将于10月8日下午6：00开始，请持续关注！</p>
+      <p style="color:#029fd6">亲，10月活动已经开始，快去申请吧！</p>
       {% endif %}
       <h5 style="color:#029fd6">申请攻略：</h5>
       <p style="color:red">1. 记住，一定要让妈妈好友闺密使用你的F码！她们申请到了会感谢您！</p>
