--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -10,8 +10,11 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">十月活动公告</div>
   <div class="panel-body">
-    <p style="color:red">第一阶段 (10月08日 - 10月16日)：</font> 免单大礼活动（1000份免单名额）。距离活动结束，还剩<font style="font-size:20px;">{{ days_left }}</font>天<font style="font-size:20px;">{{ hours_left }}</font>小时！</p>
-    <p><font style="color:orange">第二阶段 (10月17日 - 10月21日)：</font> 积分换购。<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">点击投票赢积分>></a></p>
+    <p>亲，十月免单大礼活动开始啦！<font style="color:red">史无前例派发1000份大礼，无门槛100元免单机会！</font>买睡袋、买抱被、买床品、买羽绒、买棉服、全都可以随便挑啦！速度please!!!</p>
+    <p>距离活动结束，还剩<font style="font-size:20px;color:red">{{ days_left }}</font>天<font style="font-size:20px;color:red">{{ hours_left }}</font>小时！</p>
+    <p>查看F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/inviteresult/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p>积分换F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p>投票赢积分，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
   </div>
 </div>
 
