--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -10,10 +10,8 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">十月活动公告</div>
   <div class="panel-body">
-    <p>亲，十月免单大礼活动开始啦！<font style="color:red">史无前例派发1000份大礼，无门槛100元免单机会！</font>睡袋、抱被、床品、棉服、全都随便挑啦！速度please!!!</p>
     <p>距离活动结束，还剩<font style="font-size:20px;color:red">{{ days_left }}</font>天<font style="font-size:20px;color:red">{{ hours_left }}</font>小时！</p>
-    <p>查看F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/inviteresult/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
-    <p>积分换F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p>亲，十月免单大礼活动开始啦！<font style="color:red">史无前例派发1000份大礼，无门槛100元免单机会！</font>睡袋、抱被、床品、棉服、全都随便挑啦！速度please!!!</p>
     <p>投票赢积分，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
   </div>
 </div>
@@ -82,7 +80,7 @@
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">申请须知</h5>
-    <p style="color:orange">1) 申请之后，您会得到一个带VIP邀请码的专属页面，分享到您的朋友圈，会大大提高您的选中几率！</p>
+    <p style="color:orange">1) 申请之后，您会得到一个带F邀请码的专属页面，分享到您的朋友圈，会大大提高您的选中几率！</p>
     <p>2) 若您有过购买记录、晒单记录、好评记录、或邀请好友记录，系统会优先审核您的申请。</p>
     <p>3) 审核结果将在【活动中心】->【审核通知】页面显示，请每天查阅。若审核通过，会有<font style="color:red">红色醒目提示</font>！</p>
   </div>
@@ -91,9 +89,11 @@
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">常见问题</h5>
-    <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要VIP邀请码。</font></p>
-    <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
-    <p>3) 哪些人无需邀请码申请？<font style="color:red">在9月30日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都无需输入VIP邀请码！</font></p>
+    <p>1) 查看F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/inviteresult/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p>2) 积分换F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p>3) F码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要F码。</font></p>
+    <p>4) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
+    <p>5) 哪些人无需邀请码申请？<font style="color:red">在10月1日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都无需输入F码！</font></p>
   </div>
 </div>
 
