--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -37,9 +37,10 @@
 	  {% endif %}
 	</div>
       </div>
+      {% if not order_exists %}
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-          {% if fcode_pass %}
+      {% if fcode_pass %}
           <p style="color:red">优尼美妈忠粉，无需F码！</p>
 	  <input type="hidden" {% if vipcode %} value="{{ vipcode }}" {% endif %} id="id_vipcode" status="1" name="vipcode"/>
 	  <input type="hidden" name="fcode_pass" value="1">
@@ -52,7 +53,7 @@
 	  {% endif %}
 	</div>
       </div>
-      
+      {% endif %}
       <div class="row" style="text-align:center">
 	<div class="col-xs-12" style="text-align:center; margin-top:10px">
 	  <p id="id_msg" style="color:red"></p>
