--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -12,6 +12,7 @@
   <div class="panel-body">
     <p>距离活动结束，还剩<font style="font-size:20px;color:red">{{ days_left }}</font>天<font style="font-size:20px;color:red">{{ hours_left }}</font>小时！</p>
     <p>亲，十月免单大礼活动开始啦！<font style="color:red">史无前例派发1000份大礼，无门槛100元免单机会！</font>睡袋、抱被、床品、棉服、全都随便挑啦！速度please!!!</p>
+    <p style="color:orange">第一批中奖名单：F码使用超过<font style="color:red">12次</font>即入围，恭喜中奖美妈们！<a href="http://weixin.huyi.so/weixin/invitereslt/">点击查看>></a></p>
     <p>投票赢积分，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
   </div>
 </div>
