--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,7 +9,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">公告</div>
     <div class="panel-body">
-      <p style="color:orange">十月免单活动，第一批中奖名单出炉，共{{ batch_one }}名，<a href="">查看中奖列表>></a></p>
+      <p style="color:orange">十月免单活动，第一批中奖名单出炉，共{{ batch_one }}名，<a href="/weixin/finallist/1/1/10/">查看中奖列表>></a></p>
     </div>
   </div>
 
