--- a/shopmanager/shopapp/weixin/templates/weixin/final_list.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/final_list.html
@@ -6,14 +6,10 @@
 
 <div class="container-fluid">
   <div class="panel panel-default" style="margin-top:5px">
-    {% if month == 8 %}
+    {% if month == 8 or month == 9%}
     <div class="panel-heading">详细名单</div>
     {% else %}
-    {% if batch == 1 %}
-    <div class="panel-heading">详细名单 (前五批)</div>
-    {% else %}
     <div class="panel-heading">详细名单 (第{{ batch }}批)</div>
-    {% endif %}
     {% endif %}
     <div class="panel-body">
 
