--- a/shopmanager/templates/500.html
+++ b/shopmanager/templates/500.html
@@ -13,6 +13,7 @@
 		body{
 			background-color:#E1E0DE;
 		}
+		li{list-style-type:none;}
 	</style>
   </head>
   <body>
@@ -20,10 +21,10 @@
     <div class="container">
     	<div class="container-fluid" style="text-align:center;margin-top:100px;">
     	<div style="margin-bottom:5px;"><img src="/media/img/img_err_500.jpg"></img></div>
-    	<div ><ul>
+    	<div ><ul style="text-aligin:left;">
     		  <li>系统出错了，原因可能是:</p>
     		  <li>1) 服务不稳定，请刷新或重试；</li>
-    		  <li>2) 请保证使用微信客户端访问该网页；</li>
+    		  <li>2) 请保证使用微信客户端访问该页；</li>
     		  <li>3) 系统会屏蔽同手机登录多个微信号；</li>
     		  <li>如有疑问请联系系统管理员</li>
     		  </ul>
