--- a/shopmanager/templates/500.html
+++ b/shopmanager/templates/500.html
@@ -21,7 +21,7 @@
     <div class="container">
     	<div class="container-fluid" style="text-align:center;margin-top:100px;">
     	<div style="margin-bottom:5px;"><img src="/media/img/img_err_500.jpg"></img></div>
-    	<div ><ul style="text-aligin:left;">
+    	<div ><ul style="text-align:left;">
     		  <li>系统出错了，原因可能是:</p>
     		  <li>1) 服务不稳定，请刷新或重试；</li>
     		  <li>2) 请保证使用微信客户端访问该页；</li>
