--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -12,6 +12,7 @@
       <p style="color:orange">十月免单活动，第一批中奖名单出炉，共{{ batch_one }}名，<a href="/weixin/finallist/1/1/10/">查看中奖列表>></a></p>
       <p style="color:orange">十月免单活动，第二批中奖名单出炉，共{{ batch_two }}名，<a href="/weixin/finallist/2/1/10/">查看中奖列表>></a></p>
       <p style="color:orange">十月免单活动，第三批中奖名单出炉，共{{ batch_third }}名，<a href="/weixin/finallist/3/1/10/">查看中奖列表>></a></p>
+      <p style="color:orange">十月免单活动，第四批中奖名单出炉，共{{ batch_forth }}名，<a href="/weixin/finallist/4/1/10/">查看中奖列表>></a></p>
     </div>
   </div>
 
