fix sampleads confirm

--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -70,8 +70,12 @@
 	  </div>
 	</div>
       </div>
-
-      
+    <div class="col-xs-12">
+	  <p>该活动由微信官方认证公众号发起</p>
+	  <div class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsz07Vng2TDhLpsPx02Y68qQS70AicajDErFXeMvB4pC0bfeRZKj5tTy9VMrxw9ZB9mfLqO1aTibIBw/0" alt="...">
+	  </div>
+	</div>
     </div>
   </div>
 
