--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -41,7 +41,7 @@
 	  <p style="font-size:20px; color:red; text-align:center">您刚才输入的VIP邀请码错误，请用正确的VIP邀请码重新申请!</p>
 	  <a class="btn btn-waring" href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">点击重新申请</a>
 	  {% else %}
-	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
+	  <p style="font-size:20px; color:red; text-align:center">F码: {{ vipcode }}</p>
 	  {% endif %}
 	  <p>申请流程：关注优尼世界公众微信，然后申请就搞定啦！</p>
 	</div>
