--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -71,7 +71,7 @@
 	</div>
       </div>
     <div class="col-xs-12">
-	  <p>该活动由微信官方认证公众号发起</p>
+	  <p><font style="color:#029fd6">该活动由微信官方认证公众号发起</font></p>
 	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsz07Vng2TDhLpsPx02Y68qQS70AicajDErFXeMvB4pC0bfeRZKj5tTy9VMrxw9ZB9mfLqO1aTibIBw/0" alt="...">
 	  </div>
