--- a/shopmanager/shopapp/weixin/templates/weixin/final_list.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/final_list.html
@@ -14,7 +14,7 @@
     <div class="panel-body">
 
       <div class="row">
-	{% if month == 8 %}
+	{% if month == 8 or month == 9 %}
 	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号。</p>
 	{% else %}
 	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号和专属VIP邀请码被使用次数。</p>
@@ -33,7 +33,7 @@
       
       <div class="list-group">
 	{% for item in items %}
-	{% if month == 8 %}
+	{% if month == 8 or month == 9%}
 	<a href="#" class="list-group-item">{{ forloop.counter }}: {{ item.0 }}</a>
 	{% else %}
 	<a href="#" class="list-group-item">{{ forloop.counter }}: {{ item.0 }}<span class="badge">{{ item.1 }}</span></a>
