--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -14,6 +14,7 @@
       <p style="color:orange">十月免单活动，第三批中奖名单出炉，共{{ batch_third }}名，<a href="/weixin/finallist/3/1/10/">查看中奖列表>></a></p>
       <p style="color:orange">十月免单活动，第四批中奖名单出炉，共{{ batch_forth }}名，<a href="/weixin/finallist/4/1/10/">查看中奖列表>></a></p>
       <p style="color:orange">十月免单活动，第五批中奖名单出炉，共{{ batch_fifth }}名，<a href="/weixin/finallist/5/1/10/">查看中奖列表>></a></p>
+      <p style="color:orange">十月免单活动，第六批中奖名单出炉，共{{ batch_sixth }}名，<a href="/weixin/finallist/6/1/10/">查看中奖列表>></a></p>
     </div>
   </div>
 
