--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -16,6 +16,7 @@
       <p style="color:orange">十月免单活动，第五批中奖名单出炉，共{{ batch_fifth }}名，<a href="/weixin/finallist/5/1/10/">查看中奖列表>></a></p>
       <p style="color:orange">十月免单活动，第六批中奖名单出炉，共{{ batch_sixth }}名，<a href="/weixin/finallist/6/1/10/">查看中奖列表>></a></p>
       <p style="color:orange">十月免单活动，第七批中奖名单出炉，共{{ batch_seventh }}名，<a href="/weixin/finallist/7/1/10/">查看中奖列表>></a></p>
+      <p style="color:orange">十月免单活动，第八批中奖名单出炉，共{{ batch_eighth }}名，<a href="/weixin/finallist/8/1/10/">查看中奖列表>></a></p>
     </div>
   </div>
 
