--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -21,8 +21,8 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:red"><b>十月必抢：双11免单 随你挑 免费包邮！</b></div>
   <div class="panel-body">
-    
-    <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
+    <p style="color:red">美妈们，十月免单活动申请已结束，下期活动你还要吗？</p>
+    <!--<form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
       <input type="hidden" value="{{ subscribe }}" name="subscribe" id="id_subscribe"/>
       <div class="row">
@@ -63,16 +63,13 @@
 	  {% else %}
 	  {% if openid %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
-	  <!--
-	      <p style="color:red">系统维护30分钟，给亲带来不便表示歉意！亲可以先投票赢积分哦！</p>
-	    -->
 	  {% else %}
 	  <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/&response_type=code&scope=snsapi_base&state=135#wechat_redirect" class="btn btn-warning">提交试用申请</a>
 	  {% endif %}
 	  {% endif %}
 	</div>
       </div>
-    </form>      
+    </form>-->      
     
   </div>
 </div>
