--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -10,17 +10,17 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:#e8792a">十月积分（5折）换购投票</div>
     <div class="panel-body">
-      <p style="color:#029fd6">十月积分换购，您想5折换走哪个系列的宝贝呢？投票就送积分哦！</p>
+      <p style="color:#029fd6">十月积分换购第二波，您想5折换走哪个系列的宝贝呢？投票就送积分哦！</p>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#e8792a">选择一：婴幼儿时尚羽绒系列</h5>
+	  <h5 style="color:#e8792a">选择一：婴幼儿法兰绒抱被</h5>
 	</div>
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZegRy8B01FjnJG91lKyJAIpsEFhAxg4T7VUwrUpPe1lkRu5RWPlLDLQ/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3c6pDicwBzvpsfON2T5DgtPP6DZmic5wAJDQXaDa1ias6HVx2kKazP81oBg/0" alt="...">
 	  </a>
 	</div>
       </div>
@@ -29,21 +29,21 @@
 <!--
 	  <p style="color:#e8792a">多款式，均码 <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
 -->
-	  <p id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="3" id="id_input1"> 我选择 婴幼儿时尚羽绒系列</p>{% csrf_token %}
+	  <p id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 我选择 婴幼儿法兰绒抱被</p>{% csrf_token %}
 	  <p style="color:red">得票率：{{ ratio1 }}%</p>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#e8792a">选择二：婴幼儿温暖棉服系列</h5>
+	  <h5 style="color:#e8792a">选择二：婴幼儿全棉卡通抱被</h5>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuBe3lKsVRy6Kg6RMySy2lZxRcwCnl1kKOwXM3QfwBGvd5o3qhUGKCVbibCWDlUxNL1uMbweO5wia1Q/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3c41bWEe9AsY1GaDiaYqzpDKdMUFibLFGkR7IJOPBgbnQKvXukJIzMqZ3Q/0" alt="...">
 	  </a>
 	</div>
       </div>
@@ -52,7 +52,7 @@
 <!--
 	  <p style="color:#e8792a">多款式，多尺寸 <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
 -->
-	  <p id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="4" id="id_input2"> 我选择婴幼儿温暖棉服系列</p>
+	  <p id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="6" id="id_input2"> 我选择婴幼儿温暖棉服系列</p>
 	  <p style="color:red">得票率：{{ ratio2 }}%</p>
 	</div>
       </div>
@@ -113,10 +113,10 @@
   
     var selection = 0;
     if ($("#id_input1").is(':checked')) {
-      selection = 3;
+      selection = 5;
     }
     if ($("#id_input2").is(':checked')) {
-      selection = 4;
+      selection = 6;
     }
 
     var url = "/weixin/survey/";
