--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -10,10 +10,9 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">十月活动公告</div>
   <div class="panel-body">
-    <p>还有<font style="font-size:20px;color:red">{{ left }}个</font>名额等您来抢！！距离活动结束，还剩<font style="font-size:20px;color:red">{{ days_left }}</font>天<font style="font-size:20px;color:red">{{ hours_left }}</font>小时！</p>
-    <p>亲，十月免单大礼活动开始啦！<font style="color:red">史无前例派发1000份大礼，无门槛100元免单机会！</font>睡袋、抱被、床品、棉服、全都随便挑啦！速度please!!!</p>
-    <p style="color:orange">第一批中奖名单：F码使用超过<font style="color:red">12次</font>即入围，恭喜中奖美妈们！<a href="http://weixin.huyi.so/weixin/inviteresult/">点击查看>></a></p>
-    <p>投票赢积分，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
+    <p>优尼世界十月免单活动结束了，感谢各位美妈积极参与十月的活动！</p>
+    <p style="color:red">羽绒系列[积分5折换购]火热进行中。详情请咨询客服哦！</p>
+    <p>下期5折换购，投票赢积分<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/survey/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
   </div>
 </div>
 
