--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,14 +9,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">公告</div>
     <div class="panel-body">
-      <p style="color:orange">十月免单活动，第一批中奖名单出炉，共{{ batch_one }}名，<a href="/weixin/finallist/1/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第二批中奖名单出炉，共{{ batch_two }}名，<a href="/weixin/finallist/2/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第三批中奖名单出炉，共{{ batch_third }}名，<a href="/weixin/finallist/3/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第四批中奖名单出炉，共{{ batch_forth }}名，<a href="/weixin/finallist/4/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第五批中奖名单出炉，共{{ batch_fifth }}名，<a href="/weixin/finallist/5/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第六批中奖名单出炉，共{{ batch_sixth }}名，<a href="/weixin/finallist/6/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第七批中奖名单出炉，共{{ batch_seventh }}名，<a href="/weixin/finallist/7/1/10/">查看中奖列表>></a></p>
-      <p style="color:orange">十月免单活动，第八批中奖名单出炉，共{{ batch_eighth }}名，<a href="/weixin/finallist/8/1/10/">查看中奖列表>></a></p>
+      <p style="color:orange">十月免单活动，中奖名单: 第<a href="/weixin/finallist/1/1/10/">1</a>,<a href="/weixin/finallist/2/1/10/">2</a>,<a href="/weixin/finallist/3/1/10/">3</a>,<a href="/weixin/finallist/4/1/10/">4</a>,<a href="/weixin/finallist/5/1/10/">5</a>,<a href="/weixin/finallist/6/1/10/">6</a>,<a href="/weixin/finallist/7/1/10/">7</a>,<a href="/weixin/finallist/8/1/10/">8</a>批。</p>
     </div>
   </div>
 
@@ -31,30 +24,21 @@
         <p><a href="#" class="thumbnail"><img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs4KuzkadDvX5Ddk43ziaIpLXQFibJAA7txg7EUD2bJcArRxBic9CR5BfMOjevSLKnemodPbw4evtX1w/0"></a></p>
         <p style="color:red">申请进群时，请提供您的F码！若不能进群，请联系微信客服！</p>
         {% else %}
-          {% if order_status == 9 %}
-          <p>亲，您的F码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red;font-size:20px">{{ usage_count }}</font>次，奖励微信粉丝专属优惠券：</p>
-          <p>1) 时尚婴幼儿斗篷<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下，付款<font style="color:red;font-size:20px">立减30元！截至9月30日！</font></p>
+          {% if order_status == -1 %}
+          <p style="color:red">您的试用申请已被系统判定为黑名单，原因可能是您的申请所使用多个手机号均无法接通，如有疑问请联系微信客服。</p>
+	  {% else %}
+          <p>亲，感谢您对优尼世界的一直关注，奖励微信粉丝专属优惠券：</p>
+          <p>双11当日，<font style="color:red;">满199减50元</font>优惠券！到天猫【优尼世界旗舰店】拍下，付款<font style="color:red;font-size:20px">立减50元！</font></p>
           <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
           <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuWjC2yA8fC0Dh8VRu28gdCSUItxZ3EYr8bjIV6f4WwhgAKg83kLQeoobLDbZS0RHTNUCBrChQyicA/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0" alt="...">
           </a>
           <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
-          {% elif order_status == -1 %}
-          <p style="color:red">您的试用申请已被系统判定为黑名单，原因可能是您的申请所使用多个手机号均无法接通，如有疑问请联系微信客服。</p>
-          {% else %}
-          <p>亲，您的F码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red;font-size:20px">{{ usage_count }}</font>次!</p>
-      <!--
-	  <p>感谢您的参与，请关注优尼世界后续活动，赢取大奖哦！</p>
-	  -->
           {% endif %}
         {% endif %}
       {% else %}
-      <p style="color:#029fd6">亲，10月活动已经开始，快去申请吧！</p>
+      <p style="color:#029fd6">亲，10月积分5折换购已经开始，快去抢购吧！</p>
       {% endif %}
-      <h5 style="color:#029fd6">申请攻略：</h5>
-      <p style="color:red">1. 记住，一定要让妈妈好友闺密使用你的F码！她们申请到了会感谢您！</p>
-      <p style="color:red">2. 论坛/微博/社区攻略：发帖会被删，回帖一般不会。在回帖中带上你的F码:)</p>
-      <p>亲，分享、邀请，继续加油吧，惊喜等着您！</p>
     </div>
   </div>
 
