--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -16,6 +16,9 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">10月活动审核状态</div>
     <div class="panel-body">
+      {% if isvalid %}
+      <p style="font-size:20px;color:red">参加积分5折换购的亲，若有疑问，请加入qq群385056821咨询客服。</p>
+      {% endif %}
       {% if has_order %}
         {% if order_status > 30 %}
         <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦!</p>
@@ -39,6 +42,7 @@
       {% else %}
       <p style="color:#029fd6">亲，10月积分5折换购已经开始，快去抢购吧！</p>
       {% endif %}
+
     </div>
   </div>
 
